deployments/conjur-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: '2017-12-01T18:42:22Z'
  generation: 2
  labels:
    app: conjur-appliance
  name: conjur-appliance
  namespace: conjur
  resourceVersion: '1463'
  selfLink: /oapi/v1/namespaces/conjur/deploymentconfigs/conjur-appliance
  uid: 5dfa8c41-d6c7-11e7-8db6-000c2977d197
spec:
  replicas: 1
  selector:
    app: conjur-appliance
    deploymentconfig: conjur-appliance
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: conjur-appliance
        deploymentconfig: conjur-appliance
    spec:
      containers:
        - image: >-
            172.30.1.1:5000/conjur/conjur-appliance@sha256:676dd437cc8d6ad88523c7ef46ede87c31fe6610525e2f27a4b2f1ece43f7748
          imagePullPolicy: Always
          name: conjur-appliance
          ports:
            - containerPort: 22
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 636
              protocol: TCP
            - containerPort: 5432
              protocol: TCP
            - containerPort: 5433
              protocol: TCP
            - containerPort: 38053
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
          - conjur-appliance
        from:
          kind: ImageStreamTag
          name: 'conjur-appliance:latest'
          namespace: conjur
        lastTriggeredImage: >-
          172.30.1.1:5000/conjur/conjur-appliance@sha256:676dd437cc8d6ad88523c7ef46ede87c31fe6610525e2f27a4b2f1ece43f7748
      type: ImageChange
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2017-12-01T18:42:26Z'
      lastUpdateTime: '2017-12-01T18:42:26Z'
      message: Deployment config has minimum availability.
      status: 'True'
      type: Available
    - lastTransitionTime: '2017-12-01T18:42:24Z'
      lastUpdateTime: '2017-12-01T18:42:27Z'
      message: replication controller "conjur-appliance-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: 'True'
      type: Progressing
  details:
    causes:
      - imageTrigger:
          from:
            kind: ImageStreamTag
            name: 'conjur-appliance:latest'
            namespace: conjur
        type: ImageChange
    message: image change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
