deployments/postgres-deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  creationTimestamp: '2017-12-04T08:18:09Z'
  generation: 2
  labels:
    app: postgresql-persistent
    template: postgresql-persistent-template
  name: postgresql
  namespace: conjur
  resourceVersion: '1555'
  selfLink: /oapi/v1/namespaces/conjur/deploymentconfigs/postgresql
  uid: a99195f6-d8cb-11e7-8dfe-000c2977d197
spec:
  replicas: 1
  selector:
    name: postgresql
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: postgresql
    spec:
      containers:
        - env:
            - name: POSTGRESQL_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: postgresql
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: postgresql
            - name: POSTGRESQL_DATABASE
              value: insults
          image: >-
            centos/postgresql-95-centos7@sha256:681b7dc0c739891e4645b3594f12688e059141132bece332baf6311a883f9584
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5432
            timeoutSeconds: 1
          name: postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - '-i'
                - '-c'
                - >-
                  psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d
                  $POSTGRESQL_DATABASE -c 'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              memory: 512Mi
          securityContext:
            capabilities: {}
            privileged: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql
  test: false
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - postgresql
        from:
          kind: ImageStreamTag
          name: 'postgresql:9.5'
          namespace: openshift
        lastTriggeredImage: >-
          centos/postgresql-95-centos7@sha256:681b7dc0c739891e4645b3594f12688e059141132bece332baf6311a883f9584
      type: ImageChange
    - type: ConfigChange
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: '2017-12-04T08:19:10Z'
      lastUpdateTime: '2017-12-04T08:19:10Z'
      message: Deployment config has minimum availability.
      status: 'True'
      type: Available
    - lastTransitionTime: '2017-12-04T08:19:12Z'
      lastUpdateTime: '2017-12-04T08:19:12Z'
      message: replication controller "postgresql-1" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: 'True'
      type: Progressing
  details:
    causes:
      - imageTrigger:
          from:
            kind: ImageStreamTag
            name: 'postgresql:9.5'
            namespace: openshift
        type: ImageChange
    message: image change
  latestVersion: 1
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  unavailableReplicas: 0
  updatedReplicas: 1
